--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:/Users/DELL/AppData/Local/Android/Sdk
-flutter.sdk=C:\\flutter2
+sdk.dir=D:\\android\\sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=release
 flutter.versionName=1.0.5
 flutter.versionCode=6
